<resources>
    <string name="app_name">Just Java</string>
    <string name="order">Order</string>
    <string name="show_map">Show Map</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="chocolate">Chocolate</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="price">Price</string>
</resources>
